kubernetes-ingress/ingress-example1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp1
  labels:
    app: myapp1
spec:
  containers:
  - name: myapp1
    image: nginx:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: myapp2
  labels:
    app: myapp2
spec:
  containers:
  - name: myapp2
    image: httpd:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp1
spec:
  selector:
    app: myapp1
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: myapp2
spec:
  selector:
    app: myapp2
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    app.kubernetes.io/name: myingress
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: myapp1
        backend:
          service:
            name: myapp1
            port: 
              number: 80
  - http:
      paths:
      - pathType: Prefix
        path: myapp2
        backend:
          service:
            name: myapp2
            port: 
              number: 80
